puppet/testdata/annotator/incompleteString.pp
$var = <error descr="Closing quote missing">'testf</error>